changed committe card color

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -142,7 +142,7 @@
               <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
-                  style="background-color: lightcoral"
+                  style="background-color: rgb(255, 93, 93)"
                   src="./delegates-logo/un-white.png"
                   alt=""
                 />
@@ -171,7 +171,7 @@
               <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid p-4 pb-5"
-                  style="background-color: lightcoral"
+                  style="background-color: rgb(255, 93, 93)"
                   src="./delegates-logo/wha.png"
                   alt=""
                 />
@@ -200,7 +200,7 @@
               <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
-                  style="background-color: lightcoral"
+                  style="background-color:rgb(255, 93, 93)"
                   src="./delegates-logo/ctc.png"
                   alt=""
                 />
@@ -230,7 +230,7 @@
               <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
-                  style="background-color: lightcoral"
+                  style="background-color: rgb(255, 93, 93)"
                   src="./delegates-logo/unhrc-white.png"
                   alt=""
                 />
@@ -288,7 +288,7 @@
               <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
-                  style="background-color: lightcoral"
+                  style="background-color: rgb(255, 93, 93)"
                   src="./delegates-logo/ip-white.png"
                   alt=""
                 />
