--- a/index.html
+++ b/index.html
@@ -51,36 +51,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Apply Now
-              </a>
-              <ul
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <li>
-                  <a
-                    class="dropdown-item"
-                    href="./register/delegate_register.html"
-                    >Delegate Application</a
-                  >
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./register/ip_register.html"
-                    >International Press Application</a
-                  >
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle text-white"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Our Team
+                Team
               </a>
               <ul
                 class="dropdown-menu"
@@ -108,6 +79,36 @@
                 >Committees</a
               >
             </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle text-white"
+                href="#"
+                id="navbarDropdownMenuLink"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Apply Now
+              </a>
+              <ul
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              >
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./register/delegate_register.html"
+                    >Delegate Application</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./register/ip_register.html"
+                    >International Press Application</a
+                  >
+                </li>
+              </ul>
+            </li>
+
             <li class="nav-item">
               <a class="nav-link text-white" href="gallery.html">Gallery</a>
             </li>
@@ -115,7 +116,9 @@
               <a class="nav-link text-white" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="./contact.html">Contact Us</a>
+              <a class="nav-link text-white" href="./contact.html"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
@@ -153,15 +156,23 @@
             />
             <div class="container">
               <div class="carousel-caption text-start">
-                <h1>Example headline.</h1>
+                <h1>
+                  Winds of Change: Navigating through a new normal in the
+                  Multipolar World
+                </h1>
                 <p>
-                  Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-                  Donec id elit non mi porta gravida at eget metus. Nullam id
-                  dolor id nibh ultricies vehicula ut id elit.
+                  It exhibits courage of one and all who have adapted and
+                  changed with the wind, not backing down but taking the
+                  challenge head on. The theme will perfectly incapsulate the
+                  challenging times during the pandemic and the relentless
+                  determination to succeed.
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#" role="button"
-                    >Sign up today</a
+                  <a
+                    class="btn btn-lg btn-primary"
+                    href="./register/delegate_register.html"
+                    role="button"
+                    >Apply</a
                   >
                 </p>
               </div>
@@ -178,14 +189,24 @@
 
             <div class="container">
               <div class="carousel-caption">
-                <h1>Another example headline.</h1>
+                <h1>
+                  The AMIMUN legacy is a proud one and has become a benchmark in
+                  Model United Nations Conference in the circuit; having
+                  successfully carved out a niche for itself.
+                </h1>
                 <p>
-                  Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-                  Donec id elit non mi porta gravida at eget metus. Nullam id
-                  dolor id nibh ultricies vehicula ut id elit.
+                  AMIMUN has kept in consistent touch with the leanings of the
+                  United Nations, and this is reflected by the socially relevant
+                  themes that have been adopted to drive our last editions of
+                  AMIMUN, to recall few themes : “Grey to Green”, “Youth
+                  Empowerment”, “Humanity before Mankind”, “Aspirare ad
+                  Inspirare”, “Débat. Discuter” and “Audere Est Facere”.
                 </p>
                 <p>
-                  <a class="btn btn-lg btn-primary" href="#" role="button"
+                  <a
+                    class="btn btn-lg btn-primary"
+                    href="about.html"
+                    role="button"
                     >Learn more</a
                   >
                 </p>
@@ -202,14 +223,13 @@
 
             <div class="container">
               <div class="carousel-caption text-end">
-                <h1>One more for good measure.</h1>
+                <h1>Glimps of AMIMUN 2020</h1>
+                <p>Get a glimps of previous edition of AMIMUN.</p>
                 <p>
-                  Cras justo odio, dapibus ac facilisis in, egestas eget quam.
-                  Donec id elit non mi porta gravida at eget metus. Nullam id
-                  dolor id nibh ultricies vehicula ut id elit.
-                </p>
-                <p>
-                  <a class="btn btn-lg btn-primary" href="#" role="button"
+                  <a
+                    class="btn btn-lg btn-primary"
+                    href="./gallery.html"
+                    role="button"
                     >Browse gallery</a
                   >
                 </p>
@@ -249,7 +269,7 @@
             style="background-color: #f4f4f4"
           >
             <div class="col p-4 d-flex flex-column position-static">
-              <p class="card-text mb-auto" style="text-align: justify;">
+              <p class="card-text mb-auto" style="text-align: justify">
                 Dear Delegate, <br />
                 It is an absolute pleasure to invite you to the
                 <strong
@@ -317,17 +337,7 @@
                 <span class="text-muted">Chauhan</span>
               </h2>
               <h5>Founder</h5>
-              <p class="lead" style="text-align: justify;">
-                The Secretariat of Amity International Model United Nations
-                Conference consists of individuals who have consistently proven
-                themselves to be hardworking and knowledgeable. Each person was
-                handpicked for ensuring AMIMUN's ideals are upheld and executed
-                with the utmost dedication. Time and again they have ensured the
-                smooth running of all the committees, while simultaneously
-                maintaining the highest level of hospitality. Thus, we know our
-                promise of quality will be diligently followed, guaranteeing an
-                enriching experience for all who attend.
-              </p>
+              <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5">
               <img class="d-block img-fluid" src="./static/ashok.jpg" alt="" />
@@ -343,19 +353,7 @@
                 <span class="text-muted">Chauhan</span>
               </h2>
               <h5>Chancellor</h5>
-              <p class="lead" style="text-align: justify;">
-                Amity is made up of a multitude of people, from various
-                backgrounds, interact and work with one another. AMIMUN takes
-                advantage of this, allowing for a huge international platform,
-                where ideas can be propagated, opinions formed, and views
-                widened. Past editions of AMIMUN have been conducted in
-                association with international bodies like the United Nations
-                Information Centre for India and Bhutan (UNIC), Medecins Sans
-                Frontieres, and Amnesty International India, and included
-                delegates and dignitaries from Europe. AMIMUN truly is the best
-                place to not only to showcase one's talent but further grow as a
-                delegate and an individual.
-              </p>
+              <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5 order-md-1">
               <img
@@ -370,31 +368,15 @@
 
           <div class="row featurette">
             <div class="col-md-7">
-             <h2 class="featurette-heading">
+              <h2 class="featurette-heading">
                 Dr. Balvinder
                 <span class="text-muted">Shukla</span>
               </h2>
               <h5>Vice Chancellor</h5>
-              <p class="lead" style="text-align: justify;">
-                Amity is made up of a multitude of people, from various
-                backgrounds, interact and work with one another. AMIMUN takes
-                advantage of this, allowing for a huge international platform,
-                where ideas can be propagated, opinions formed, and views
-                widened. Past editions of AMIMUN have been conducted in
-                association with international bodies like the United Nations
-                Information Centre for India and Bhutan (UNIC), Medecins Sans
-                Frontieres, and Amnesty International India, and included
-                delegates and dignitaries from Europe. AMIMUN truly is the best
-                place to not only to showcase one's talent but further grow as a
-                delegate and an individual.
-              </p>
+              <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5">
-              <img
-                class="d-block img-fluid"
-                src="./static/bal.jpg"
-                alt=""
-              />
+              <img class="d-block img-fluid" src="./static/bal.jpg" alt="" />
             </div>
           </div>
           <hr class="featurette-divider" />
@@ -405,26 +387,10 @@
                 <span class="text-muted">Hasteer</span>
               </h2>
               <h5>[ENTER ROLE]</h5>
-              <p class="lead" style="text-align: justify;">
-                Amity is made up of a multitude of people, from various
-                backgrounds, interact and work with one another. AMIMUN takes
-                advantage of this, allowing for a huge international platform,
-                where ideas can be propagated, opinions formed, and views
-                widened. Past editions of AMIMUN have been conducted in
-                association with international bodies like the United Nations
-                Information Centre for India and Bhutan (UNIC), Medecins Sans
-                Frontieres, and Amnesty International India, and included
-                delegates and dignitaries from Europe. AMIMUN truly is the best
-                place to not only to showcase one's talent but further grow as a
-                delegate and an individual.
-              </p>
+              <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
             <div class="col-md-5 order-md-1">
-              <img
-                class="d-block img-fluid"
-                src="./static/nat.jpg"
-                alt=""
-              />
+              <img class="d-block img-fluid" src="./static/nat.jpg" alt="" />
             </div>
           </div>
         </div>
@@ -497,7 +463,7 @@
       <footer class="container">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
-          © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
+          &copy; Amity University<a href="#">Privacy</a> ·
           <a href="#">Terms</a>
         </p>
       </footer>
