final changes on home and about

--- a/about.html
+++ b/about.html
@@ -295,18 +295,20 @@
         <div class="px-0">
           <h1 class="display-4 font-italic">Amity University</h1>
           <p class="lead my-3">
-            Our Vision Building the nation and the society through providing
-            total, integrated and trans-cultural quality education and to be the
-            global front runner in value education and nurturing talent in which
-            Modernity Blends with Tradition<br />
-            Our Mission To provide education at all levels in all disciplines of
-            modern times and in the futuristic and emerging frontier areas of
-            knowledge, learning and research and to develop the overall
-            personality of students by making them not only excellent
-            professionals but also good individuals, with understanding and
-            regard for human values, pride in their heritage and culture, a
-            sense of right and wrong and yearning for perfection and imbibe
-            attributes of courage of conviction and action.
+            <h4>Our Vision</h4> in Building the country and the general public is through
+            giving collective, coordinated, and trans-social quality teaching
+            and to be the worldwide leader in worth training and supporting
+            ability where Modernity Blends with Tradition.</br>
+            <br>
+            <h4>Our Mission</h4> is to
+            give education at all levels in all panels of current and modern
+            events, developing frontier areas of knowledge, learning, and
+            research and examination to build up the general character of
+            students by making them great experts as well as great people.
+            Understanding and having respect for human qualities, pride in their
+            legacy and culture, a feeling of good and bad, and yearning for
+            perfection and imbibe attributes of the courage of conviction and
+            action.
           </p>
         </div>
       </div>
@@ -324,14 +326,11 @@
             <p class="lead">
               University strives for the uncompromising quality and highest
               standard of excellence in teaching, learning, research and
-              scholarship across various disciplines.University strives for the
-              uncompromising quality and highest standard of excellence in
-              teaching, learning, research and scholarship across various
-              disciplines.
+              scholarship across various disciplines.
             </p>
           </div>
           <div class="col-md-5">
-            <img class="d-block img-fluid" src="./static/img-2.JPG" alt="" />
+            <img class="d-block img-fluid" src="./static/Wide 1-min.JPG" alt="" />
           </div>
         </div>
 
@@ -344,22 +343,15 @@
               <span class="text-muted"> & Ethics </span>
             </h2>
             <p class="lead">
-              Amity is made up of a multitude of people, from various
-              backgrounds, interact and work with one another. AMIMUN takes
-              advantage of this, allowing for a huge international platform,
-              where ideas can be propagated, opinions formed, and views widened.
-              Past editions of AMIMUN have been conducted in association with
-              international bodies like the United Nations Information Centre
-              for India and Bhutan (UNIC), Medecins Sans Frontieres, and Amnesty
-              International India, and included delegates and dignitaries from
-              Europe. AMIMUN truly is the best place to not only to showcase
-              one's talent but further grow as a delegate and an individual.
+              University upholds the highest ethical values, integrity and
+              professionalism and an unwavering commitment to academic freedom,
+              transparency and accountability.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
             <img
               class="d-block img-fluid"
-              src="./static/DSC_0567-min.JPG"
+              src="./static/DSC_0446-min.JPG"
               alt=""
             />
           </div>
@@ -373,22 +365,15 @@
               Diversity <span class="text-muted">& Mutual Respect</span>
             </h2>
             <p class="lead">
-              Amity is made up of a multitude of people, from various
-              backgrounds, interact and work with one another. AMIMUN takes
-              advantage of this, allowing for a huge international platform,
-              where ideas can be propagated, opinions formed, and views widened.
-              Past editions of AMIMUN have been conducted in association with
-              international bodies like the United Nations Information Centre
-              for India and Bhutan (UNIC), Medecins Sans Frontieres, and Amnesty
-              International India, and included delegates and dignitaries from
-              Europe. AMIMUN truly is the best place to not only to showcase
-              one's talent but further grow as a delegate and an individual.
+              University nurtures an environment of safety, trust & mutual
+              respect and embeds equality & diversity in its Strategy by
+              ensuring that the strategic plans are fair and inclusive.
             </p>
           </div>
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="./static/DSC_0360-min.JPG"
+              src="./static/DSC_4294-min.JPG"
               alt=""
             />
           </div>
@@ -403,16 +388,13 @@
               <span class="text-muted">Of Knowledge</span>
             </h2>
             <p class="lead">
-              As the 9th edition approaches, the excellence of AMIMUN enhances.
-              It provides with finest delegates to keep up with the competition.
-              Moreover, this will develop and enhance skills to negotiate,
-              articulate and market ideas. AMIMUN will foster the critical and
-              analytical thought process to spontaneously come up with solutions
-              to some grave world problems.
+              University is driven by research and innovation and ensures
+              continuous engagement in the scholarly activities in the pursuit
+              of innovation, creativity and excellence.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="d-block img-fluid" src="./static/5.jpg" alt="" />
+            <img class="d-block img-fluid" src="./static/DSC_4103-min.JPG" alt="" />
           </div>
         </div>
 
@@ -421,21 +403,19 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">
-              Shared  <span class="text-muted">Governance</span>
+              Shared <span class="text-muted">Governance</span>
             </h2>
             <p class="lead">
-              The dedicated AMIMUN fraternity will bring forth the most engaging
-              motions aimed to facilitate the highest quality of debate. It will
-              provide with a truly holistic educational experience and raise
-              awareness. Moreover, the challenging global issues will stretch
-              the general knowledge of the participants while, sensitising them
-              to the intricate obstacles of being a global leader.
+              University encourages shared decision-making through a process
+              that rests upon collaborative consultation, open flow of
+              information, diverse involvement and collective deliberations of
+              all stake holders.
             </p>
           </div>
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="./static/DSC_4294-min.JPG"
+              src="./static/DSC_3924-min.JPG"
               alt=""
             />
           </div>
@@ -445,20 +425,17 @@
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
             <h2 class="featurette-heading">
-              Expand Horizons
-              <span class="text-muted">Of Knowledge</span>
+              Social
+              <span class="text-muted">Responsibility</span>
             </h2>
             <p class="lead">
-              As the 9th edition approaches, the excellence of AMIMUN enhances.
-              It provides with finest delegates to keep up with the competition.
-              Moreover, this will develop and enhance skills to negotiate,
-              articulate and market ideas. AMIMUN will foster the critical and
-              analytical thought process to spontaneously come up with solutions
-              to some grave world problems.
+              University creates and nurtures an inclusive environment where
+              every one can develop their full potential and contribute to the
+              interest of the society as a whole.
             </p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="d-block img-fluid" src="./static/5.jpg" alt="" />
+            <img class="d-block img-fluid" src="./static/DSC_4197-min.JPG" alt="" />
           </div>
         </div>
 
@@ -467,23 +444,36 @@
         <div class="row featurette">
           <div class="col-md-7">
             <h2 class="featurette-heading">
-              Social  <span class="text-muted">Responsibility</span>
+              Environmental <span class="text-muted">Responsibility</span>
             </h2>
             <p class="lead">
-              The dedicated AMIMUN fraternity will bring forth the most engaging
-              motions aimed to facilitate the highest quality of debate. It will
-              provide with a truly holistic educational experience and raise
-              awareness. Moreover, the challenging global issues will stretch
-              the general knowledge of the participants while, sensitising them
-              to the intricate obstacles of being a global leader.
+              University is acutely aware of its environmental responsibilities
+              and embraces principle of sustainable development to ensure that
+              any adverse environmental impact of its activities is minimized.
             </p>
           </div>
           <div class="col-md-5">
             <img
               class="d-block img-fluid"
-              src="./static/DSC_4294-min.JPG"
+              src="./static/DSC_0507-min.JPG"
               alt=""
             />
+          </div>
+        </div>
+
+        <hr class="featurette-divider" />
+        <div class="row featurette">
+          <div class="col-md-7 order-md-2">
+            <h2 class="featurette-heading">Service</h2>
+            <p class="lead">
+              University seeks to serve the diverse, personal and professional
+              development needs of its constituents and encourage habit of
+              engagement, caring, and civic responsibility by emphasizing a
+              connect between service, excellence, and career growth.
+            </p>
+          </div>
+          <div class="col-md-5 order-md-1">
+            <img class="d-block img-fluid" src="./static/DSC_0106-min.JPG" alt="" />
           </div>
         </div>
 
@@ -494,11 +484,30 @@
       <!-- /.container -->
 
       <!-- FOOTER -->
-      <footer class="container">
+      <footer class="container mt-5">
+        <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
-          © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
+          &copy; Amity University <a href="#">Privacy</a>
           <a href="#">Terms</a>
+          <span
+            ><ul class="social mb-0 list-inline mt-3">
+              <li class="list-inline-item m-0">
+                <a href="https://www.facebook.com/amitymun/" class="social-link"
+                  ><i class="fa fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+              </li></ul
+          ></span>
         </p>
       </footer>
     </main>
