--- a/delegates/aippm.html
+++ b/delegates/aippm.html
@@ -180,11 +180,30 @@
       <!-- /.container -->
 
       <!-- FOOTER -->
-      <footer class="container">
+      <footer class="container mt-5">
+        <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
-          © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
+          &copy; Amity University <a href="#">Privacy</a>
           <a href="#">Terms</a>
+          <span
+            ><ul class="social mb-0 list-inline mt-3">
+              <li class="list-inline-item m-0">
+                <a href="https://www.facebook.com/amitymun/" class="social-link"
+                  ><i class="fa fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+              </li></ul
+          ></span>
         </p>
       </footer>
     </main>
