--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="./style.css" />
     <title>AMIMUN '21</title>
   </head>
   <body>
@@ -160,13 +164,7 @@
                   Winds of Change: Navigating through a new normal in the
                   Multipolar World
                 </h1>
-                <p>
-                  It exhibits courage of one and all who have adapted and
-                  changed with the wind, not backing down but taking the
-                  challenge head on. The theme will perfectly incapsulate the
-                  challenging times during the pandemic and the relentless
-                  determination to succeed.
-                </p>
+                <p></p>
                 <p>
                   <a
                     class="btn btn-lg btn-primary"
@@ -191,17 +189,9 @@
               <div class="carousel-caption">
                 <h1>
                   The AMIMUN legacy is a proud one and has become a benchmark in
-                  Model United Nations Conference in the circuit; having
-                  successfully carved out a niche for itself.
+                  Model United Nations Conference.
                 </h1>
-                <p>
-                  AMIMUN has kept in consistent touch with the leanings of the
-                  United Nations, and this is reflected by the socially relevant
-                  themes that have been adopted to drive our last editions of
-                  AMIMUN, to recall few themes : “Grey to Green”, “Youth
-                  Empowerment”, “Humanity before Mankind”, “Aspirare ad
-                  Inspirare”, “Débat. Discuter” and “Audere Est Facere”.
-                </p>
+                <p></p>
                 <p>
                   <a
                     class="btn btn-lg btn-primary"
@@ -224,7 +214,7 @@
             <div class="container">
               <div class="carousel-caption text-end">
                 <h1>Glimps of AMIMUN 2020</h1>
-                <p>Get a glimps of previous edition of AMIMUN.</p>
+                <p></p>
                 <p>
                   <a
                     class="btn btn-lg btn-primary"
@@ -383,13 +373,28 @@
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
-                Ms. Natasha
+                Dr. Alpana
+                <span class="text-muted">Kakar</span>
+              </h2>
+              <h5>DSW</h5>
+              <p class="lead" style="text-align: justify">Coming Soon..</p>
+            </div>
+            <div class="col-md-5 order-md-1">
+              <img class="d-block img-fluid" src="./static/0921_P.png" alt="" />
+            </div>
+          </div>
+
+          <hr class="featurette-divider" />
+          <div class="row featurette">
+            <div class="col-md-7">
+              <h2 class="featurette-heading">
+                Dr. Naitasha
                 <span class="text-muted">Hasteer</span>
               </h2>
               <h5>[ENTER ROLE]</h5>
               <p class="lead" style="text-align: justify">Coming Soon..</p>
             </div>
-            <div class="col-md-5 order-md-1">
+            <div class="col-md-5">
               <img class="d-block img-fluid" src="./static/nat.jpg" alt="" />
             </div>
           </div>
@@ -401,8 +406,9 @@
         <!-- Three columns of text below the carousel -->
         <h1 class="m-5 text-center">OUR COLLABORATIONS</h1>
         <div class="row text-center m-5">
+          <h3>Announcing soon..</h3>
           <div class="col-lg-4">
-            <img class="d-block img-fluid" src="./static/sp-1.png" alt="" />
+            <!-- <img class="d-block img-fluid" src="./static/sp-1.png" alt="" /> -->
 
             <!-- <h2>Heading</h2>
             <p>
@@ -419,7 +425,7 @@
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="d-block img-fluid" src="./static/sp-2.png" alt="" />
+            <!-- <img class="d-block img-fluid" src="./static/sp-2.png" alt="" /> -->
 
             <!-- <h2>Heading</h2>
             <p>
@@ -436,7 +442,7 @@
           </div>
           <!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="d-block img-fluid" src="./static/sp-3.png" alt="" />
+            <!-- <img class="d-block img-fluid" src="./static/sp-3.png" alt="" /> -->
 
             <!-- <h2>Heading</h2>
             <p>
@@ -454,17 +460,37 @@
           <!-- /.col-lg-4 -->
         </div>
         <!-- /.row -->
-
-        <hr class="featurette-divider" />
       </div>
-      <!-- /.container -->
 
       <!-- FOOTER -->
-      <footer class="container">
+      <footer class="container mt-5">
+        <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
-          &copy; Amity University<a href="#">Privacy</a> ·
+          &copy; Amity University <a href="#">Privacy</a>
           <a href="#">Terms</a>
+          <span
+            ><ul class="social mb-0 list-inline mt-3">
+              <li class="list-inline-item m-0">
+                <a href="https://www.facebook.com/amitymun/" class="social-link"
+                  ><i class="fa fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a
+                  href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                  class="social-link"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a
+                  href="https://www.linkedin.com/company/amimunconference/"
+                  class="social-link"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+              </li></ul
+          ></span>
         </p>
       </footer>
     </main>
