--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -355,32 +355,7 @@
 
         <hr class="my-4" />
 
-        <h4 class="mb-3">Accomodation Required</h4>
-        <div class="my-3">
-          <div class="form-check">
-            <input
-              id="credit"
-              name="paymentMethod"
-              type="radio"
-              class="form-check-input"
-              checked=""
-              required=""
-            />
-            <label class="form-check-label" for="credit">Yes</label>
-          </div>
-          <div class="form-check">
-            <input
-              id="debit"
-              name="paymentMethod"
-              type="radio"
-              class="form-check-input"
-              required=""
-            />
-            <label class="form-check-label" for="debit">No</label>
-          </div>
-        </div>
-
-        <hr class="my-4" />
+        
 
         <h4 class="mb-3">Please answer the following questions.</h4>
         <div class="my-3">
@@ -426,7 +401,7 @@
         <div class="row gy-3">
           <div class="col-12">
             <label for="exampleFormControlTextarea1"
-              >What are your views on India's stance on Climate Change?</label
+              >What are your views on India's stance on Economic Recovery after COVID-19 Outbreak?</label
             >
             <textarea
               class="form-control"
@@ -474,14 +449,32 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="container mt-4">
-      <hr class="featurette-divider" />
-      <p class="float-end"><a href="#">Back to top</a></p>
-      <p>
-        © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
-        <a href="#">Terms</a>
-      </p>
-    </footer>
+    <footer class="container mt-5">
+        <hr class="featurette-divider" />
+        <p class="float-end"><a href="#">Back to top</a></p>
+        <p>
+          &copy; Amity University <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          <span
+            ><ul class="social mb-0 list-inline mt-3">
+              <li class="list-inline-item m-0">
+                <a href="https://www.facebook.com/amitymun/" class="social-link"
+                  ><i class="fa fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a href="https://instagram.com/amimun21?igshid=ndh9t257dsh" class="social-link"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a href="https://www.linkedin.com/company/amimunconference/" class="social-link"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+              </li></ul
+          ></span>
+        </p>
+      </footer>
 
     <!-- <div class="container"></div> -->
 
