--- a/contact.html
+++ b/contact.html
@@ -302,17 +302,17 @@
         </div>
       </section>
       <!-- <section class="container"> -->
-        <iframe
-          class="container my-5"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8605622545974!2d77.33091981556557!3d28.54391058245284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sus!4v1612112348525!5m2!1sen!2sus"
-          width="600"
-          height="450"
-          frameborder="0"
-          style="border: 0"
-          allowfullscreen=""
-          aria-hidden="false"
-          tabindex="0"
-        ></iframe>
+      <iframe
+        class="container my-5"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8605622545974!2d77.33091981556557!3d28.54391058245284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sus!4v1612112348525!5m2!1sen!2sus"
+        width="600"
+        height="450"
+        frameborder="0"
+        style="border: 0"
+        allowfullscreen=""
+        aria-hidden="false"
+        tabindex="0"
+      ></iframe>
       <!-- </section> -->
       <!-- FOOTER -->
 
@@ -320,8 +320,30 @@
         <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
-          © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
+          &copy; Amity University <a href="#">Privacy</a>
           <a href="#">Terms</a>
+          <span
+            ><ul class="social mb-0 list-inline mt-3">
+              <li class="list-inline-item m-0">
+                <a href="https://www.facebook.com/amitymun/" class="social-link"
+                  ><i class="fa fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a
+                  href="https://instagram.com/amimun21?igshid=ndh9t257dsh"
+                  class="social-link"
+                  ><i class="fa fa-instagram"></i
+                ></a>
+              </li>
+              <li class="list-inline-item m-0">
+                <a
+                  href="https://www.linkedin.com/company/amimunconference/"
+                  class="social-link"
+                  ><i class="fa fa-linkedin"></i
+                ></a>
+              </li></ul
+          ></span>
         </p>
       </footer>
     </main>
